# axum-paystack

./: .env.example  Cargo.toml
src/: main.rs
src/config/: database.rs
src/models/: customers.rs  mod.rs  transaction.rs  wallet.rs
