[package]
name = "axum-paystack"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bson = "2.15.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
mongodb = "3.2.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
tokio = "1.46.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
